<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movie"
            type="com.example.crud.movie.Movie" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".movie.BaseAddEditMovieActivity">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/movie_id"
            android:textColor="@color/text_color_black" />

        <EditText
            android:id="@+id/movie_id_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:text="@{movie.movieId}"
            android:textColor="@color/text_color_black"
            tools:text="MovieId" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/movie_name"
            android:textColor="@color/text_color_black" />

        <EditText
            android:id="@+id/movie_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:text="@{movie.movieName}"
            android:textColor="@color/text_color_black" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/series"
            android:textColor="@color/text_color_black" />

        <Spinner
            android:id="@+id/movie_series_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/image_url"
            android:textColor="@color/text_color_black" />

        <EditText
            android:id="@+id/image_url_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:text="@{movie.movieImageUrl}"
            android:textColor="@color/text_color_black" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/description"
            android:textColor="@color/text_color_black" />

        <EditText
            android:id="@+id/movie_description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:text="@{movie.description}"
            android:textColor="@color/text_color_black" />
    </LinearLayout>
</layout>