<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="series"
            type="com.example.crud.series.Series" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".series.BaseAddEditSeriesItemActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/series_id"
            android:textColor="@color/text_color_black" />

        <EditText
            android:id="@+id/series_id_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:text="@{series.seriesId}"
            android:textColor="@color/text_color_black"
            tools:text="seriesId" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/series_name"
            android:textColor="@color/text_color_black" />

        <EditText
            android:id="@+id/series_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:text="@{series.name}"
            android:textColor="@color/text_color_black"
            tools:text="seriesName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/image_url"
            android:textColor="@color/text_color_black" />

        <EditText
            android:id="@+id/series_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:text="@{series.imageUrl}"
            android:textColor="@color/text_color_black"
            tools:text="imageUrl" />
    </LinearLayout>
</layout>